# wotlk-webtools

./: Cargo.toml  testpayload.txt
frontend/src/: middleware.js
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/api/auth/: route.js
frontend/src/app/api/download/: route.js
frontend/src/app/download/: page.js
frontend/src/app/login/: page.js
frontend/src/components/navbar/: NavBar.js
src/: main.rs
