[package]
name = "wotlk-webtools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio-util = { version = "0.7.13", features = ["io"] }
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio", "chrono"] }
axum = "0.8"
axum-extra = "0.10"
axum-server ={ version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sha2 = "0.10.8"
getrandom = "0.2.15"